2013-06-02  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (SaveAsEMF, CopyClip):  Turn off antialiasing during
	export to EMF or clipboard in order not to mix GDI and GDI+ calls.  See
	also change on 2012-07-24.

	* src/misc.c (loadpath_fopen):  Always open files in binary mode on
	Windows.  If this should happen to cause side effects for text inline
	data, there should still be enough time to correct those before the next
	release.
	Bug #880.

	* src/win/wredirect.cpp src/win/winmain.c src/win/wtext.h
	config/mingw/Makefile config/msvc/Makefile:  Redirect C++ cout and cerr
	to Windows text window.

	* src/fit.c (analyze) src/matrix.c|h (sumsq_vec):  Use the Neumaier
	variant of the Kahan and Babuska algorithm to sum up the chisq in order
	to reduce rounding errors.

2013-05-31  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/wxt_gui.cpp (wxt_sigint_handler):  The wxt terminal
	deadlocks if connection to the X-server is lost (Bug #991).  Ctrl-C
	doesn't break the deadlock because this interrupt handler simply flags
	the signal and waits for the parent process to handle it.  Parent and
	child are thus waiting on each other -> deadlock.  Now we add a test
	for Ctrl-C arriving when the Ctrl-C flag is already set, and exit if
	it happens. Thus hitting Ctrl-C twice breaks the deadlock.
	Not great but better than hanging.
	Bug #991.

	* src/plot3d.c:  If a surface plot or contour is requested using a funky
	style (histogram? errorbars?) print a warning and then ignore it rather
	than plotting with style "points".

	* docs/titlepag.tex docs/plotstyles.gnu docs/gnuplot.doc:
	Add a sample figure illustrating use of `with labels` to define a set
	of point types as character glyphs and then select which one is used
	based on column data.

	* docs/doc2tex.c docs/gnuplot.doc:
	Tweak page layout of the document produced by 'make pdffigures'.

2013-05-27  Thomas Mattison  <mattison <at> phas.ubc.ca>
